[gd_scene load_steps=12 format=3 uid="uid://btqosybqou1ig"]

[ext_resource type="Script" path="res://Scripts/upgrade_menu.gd" id="1_kokcv"]
[ext_resource type="PackedScene" uid="uid://brp2an7hbk3vf" path="res://Scenes/gui.tscn" id="1_qfxr1"]
[ext_resource type="Script" path="res://Scripts/upgrade_card.gd" id="2_w3lrs"]
[ext_resource type="FontFile" uid="uid://bll85hvug6nbe" path="res://Assets/monobit.ttf" id="4_anr2d"]
[ext_resource type="Texture2D" uid="uid://7keckxl1njt6" path="res://Assets/cards/cards3.png" id="4_ogub7"]
[ext_resource type="Texture2D" uid="uid://pl3qb6dfp1yv" path="res://Assets/cards/cards2.png" id="6_0w0cd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1s1em"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pbjmq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j2pkn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thbhy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1vr01"]

[node name="UpgradeMenu" type="Node2D"]
script = ExtResource("1_kokcv")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
offset_left = -306.0
offset_top = -175.0
offset_right = 304.0
offset_bottom = 181.0
color = Color(0.145098, 0.443137, 0.47451, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_top = 40.0
offset_right = 1153.0
offset_bottom = 172.0
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("4_anr2d")
theme_override_font_sizes/font_size = 128
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GUI" parent="CanvasLayer" instance=ExtResource("1_qfxr1")]
upgrade_menu = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="SmallUpgradeCard" type="Node2D" parent="." groups=["cards"]]
position = Vector2(-173, -62)
script = ExtResource("2_w3lrs")

[node name="ColorRect" type="Sprite2D" parent="SmallUpgradeCard"]
position = Vector2(40, 62)
scale = Vector2(5, 5)
texture = ExtResource("4_ogub7")

[node name="Highlight" type="ColorRect" parent="SmallUpgradeCard/ColorRect"]
z_index = -1
offset_left = -13.0
offset_top = -17.0
offset_right = 13.0
offset_bottom = 17.0
color = Color(1, 1, 1, 0)

[node name="Button" type="Button" parent="SmallUpgradeCard"]
offset_right = 84.0
offset_bottom = 134.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_1s1em")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pbjmq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j2pkn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_thbhy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1vr01")

[node name="UpgradeText" type="Label" parent="SmallUpgradeCard"]
offset_left = 12.0
offset_top = 10.3334
offset_right = 68.0
offset_bottom = 45.3334
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(26.6667, 17.3333)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_fonts/font = ExtResource("4_anr2d")
theme_override_font_sizes/font_size = 16
text = "More checks for Bob"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CostText" type="Label" parent="SmallUpgradeCard"]
offset_top = 78.0
offset_right = 56.0
offset_bottom = 115.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_fonts/font = ExtResource("4_anr2d")
theme_override_font_sizes/font_size = 16
text = "10% of  budget"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LargeUpgradeCard" type="Node2D" parent="." groups=["cards"]]
position = Vector2(86, -62)
script = ExtResource("2_w3lrs")

[node name="ColorRect" type="Sprite2D" parent="LargeUpgradeCard"]
position = Vector2(40, 62)
scale = Vector2(5, 5)
texture = ExtResource("6_0w0cd")

[node name="Highlight" type="ColorRect" parent="LargeUpgradeCard/ColorRect"]
z_index = -1
offset_left = -13.0
offset_top = -17.0
offset_right = 13.0
offset_bottom = 17.0
color = Color(1, 1, 1, 0)

[node name="Button" type="Button" parent="LargeUpgradeCard"]
offset_right = 84.0
offset_bottom = 134.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_1s1em")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pbjmq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j2pkn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_thbhy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1vr01")

[node name="UpgradeText" type="Label" parent="LargeUpgradeCard"]
offset_left = 12.0
offset_top = 10.3334
offset_right = 68.0
offset_bottom = 45.3334
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(26.6667, 17.3333)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_fonts/font = ExtResource("4_anr2d")
theme_override_font_sizes/font_size = 16
text = "More checks for Bob"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CostText" type="Label" parent="LargeUpgradeCard"]
offset_top = 78.0
offset_right = 56.0
offset_bottom = 115.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_fonts/font = ExtResource("4_anr2d")
theme_override_font_sizes/font_size = 16
text = "10% of  budget"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="button_down" from="SmallUpgradeCard/Button" to="." method="_on_s_button_down"]
[connection signal="button_down" from="SmallUpgradeCard/Button" to="SmallUpgradeCard" method="_on_button_down"]
[connection signal="mouse_entered" from="SmallUpgradeCard/Button" to="SmallUpgradeCard" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="SmallUpgradeCard/Button" to="SmallUpgradeCard" method="_on_button_mouse_exited"]
[connection signal="button_down" from="LargeUpgradeCard/Button" to="." method="_on_l_button_down"]
[connection signal="button_down" from="LargeUpgradeCard/Button" to="LargeUpgradeCard" method="_on_button_down"]
[connection signal="mouse_entered" from="LargeUpgradeCard/Button" to="LargeUpgradeCard" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="LargeUpgradeCard/Button" to="LargeUpgradeCard" method="_on_button_mouse_exited"]
